--- a/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.iOS/Info.plist
+++ b/UI/AutoSuggestSample/AutoSuggestSample/AutoSuggestSample.iOS/Info.plist
@@ -14,6 +14,10 @@
 	<true/>
 	<key>MinimumOSVersion</key>
 	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/uno-fluentui-assets.ttf</string>
+	</array>
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>1</integer>
