--- a/UI/CameraCaptureUI/CameraCaptureUISample/CameraCaptureUISample.UWP/CameraCaptureUISample.UWP.csproj
+++ b/UI/CameraCaptureUI/CameraCaptureUISample/CameraCaptureUISample.UWP/CameraCaptureUISample.UWP.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Uno.Core" Version="2.0.0" />
-    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
