--- a/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
+++ b/UI/ChatSignalR/UnoChat.Client/UnoChat.Client.iOS/UnoChat.Client.iOS.csproj
@@ -9,7 +9,8 @@
     <RootNamespace>UnoChat.Client</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>UnoChat.Client</AssemblyName>
-    <NuGetPackageImportStamp></NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <ResourcesDirectory>..\UnoChat.Client.Shared\Strings</ResourcesDirectory>
     <LangVersion>8.0</LangVersion>
     <ProvisioningType>manual</ProvisioningType>
@@ -129,12 +130,12 @@
       <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="Uno.UI.Lottie">
-      <Version>3.0.17</Version>
+      <Version>3.1.0-beta.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.0.17" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Media.xcassets\AppIcons.appiconset\Contents.json">
