--- a/UI/ControlLibrary/Apps/App.ControlLibrary.Wasm/Uno.Sample.ControlLibrary.Wasm.csproj
+++ b/UI/ControlLibrary/Apps/App.ControlLibrary.Wasm/Uno.Sample.ControlLibrary.Wasm.csproj
@@ -30,10 +30,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.17" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.4" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.4" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.52" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.52" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\XamlControlLibrary\XamlControlLibrary.csproj" />
