--- a/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
+++ b/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
@@ -10,7 +10,7 @@
     <DefineConstants>$(DefineConstants);__WASM__</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI" Version="3.0.17" />
+    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
   </ItemGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'uap10.0' ">
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform " Version="6.0.8" />
