--- a/UI/DualScreenSample/DualScreenSample.UWP/DualScreenSample.UWP.csproj
+++ b/UI/DualScreenSample/DualScreenSample.UWP/DualScreenSample.UWP.csproj
@@ -14,7 +14,7 @@
       <Version>2.4.3</Version>
     </PackageReference>
     <PackageReference Include="Uno.Core" Version="2.0.0" />
-    <PackageReference Include="Uno.UI" Version="3.0.12" />
+    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
   </ItemGroup>
