--- a/UI/DualScreenSample/DualScreenSample.Wasm/DualScreenSample.Wasm.csproj
+++ b/UI/DualScreenSample/DualScreenSample.Wasm/DualScreenSample.Wasm.csproj
@@ -39,10 +39,10 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.0.12" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.12" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.3.0" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.3.0" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.52" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.52" />
   </ItemGroup>
   <Import Project="..\DualScreenSample.Shared\DualScreenSample.Shared.projitems" Label="Shared" Condition="Exists('..\DualScreenSample.Shared\DualScreenSample.Shared.projitems')" />
 </Project>
