--- a/UI/ToyCar/ToyCar.Wasm/ToyCar.Wasm.csproj
+++ b/UI/ToyCar/ToyCar.Wasm/ToyCar.Wasm.csproj
@@ -36,11 +36,10 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.1.0-dev.271" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-dev.271" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.1.0-dev.271" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.32" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.32" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.4.0-dev.52" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.4.0-dev.52" />
   </ItemGroup>
   <Import Project="..\ToyCar.Shared\ToyCar.Shared.projitems" Label="Shared" Condition="Exists('..\ToyCar.Shared\ToyCar.Shared.projitems')" />
 </Project>
