--- a/UI/WCTTabView/TabViewSample/TabViewSample.Droid/TabViewSample.Droid.csproj
+++ b/UI/WCTTabView/TabViewSample/TabViewSample.Droid/TabViewSample.Droid.csproj
@@ -62,12 +62,12 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>6.1.0-build.191.gc988bdd4ff</Version>
+      <Version>6.1.0-build.196.g6dcc67b713</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.0.17" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.0.17" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.32" />
   </ItemGroup>
   <ItemGroup>
