--- a/UI/UnoContoso/UnoContoso.Droid/UnoContoso.Droid.csproj
+++ b/UI/UnoContoso/UnoContoso.Droid/UnoContoso.Droid.csproj
@@ -73,9 +73,9 @@
     <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.2-uno.79</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.2.0-dev.254" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.2.0-dev.254" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.32" />
+    <PackageReference Include="Uno.UI" Version="3.2.0" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.2.0" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.33" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Prism.DryIoc.Uno" Version="8.0.0.1909" />
