--- a/UI/UnoContoso/UnoContoso.Wasm/UnoContoso.Wasm.csproj
+++ b/UI/UnoContoso/UnoContoso.Wasm/UnoContoso.Wasm.csproj
@@ -42,8 +42,8 @@
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="6.1.0-build.191.gc988bdd4ff" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid" Version="6.1.0-build.191.gc988bdd4ff" />
     <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed" Version="2.0.2-uno.79" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.2.0-dev.254" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.2.0-dev.254" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.2.0" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.2.0" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.5.0-dev.57" />
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="1.5.0-dev.57" />
     <PackageReference Include="Prism.Core" Version="8.0.0.1909" />
