--- a/UI/UnoContoso/UnoContoso.iOS/UnoContoso.iOS.csproj
+++ b/UI/UnoContoso/UnoContoso.iOS/UnoContoso.iOS.csproj
@@ -127,8 +127,8 @@
     <PackageReference Include="Uno.Microsoft.Xaml.Behaviors.Uwp.Managed">
       <Version>2.0.2-uno.79</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.2.0-dev.254" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.2.0-dev.254" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI" Version="3.2.0" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.2.0" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Prism.DryIoc.Uno" Version="8.0.0.1909" />
