fix: Update MapControl sample to Uno 3.3, add MapResources
This fixes MapControl for breaking changes introduced in Uno 3.0.

--- a/UI/MapControlSample/MapControlSample/MapControlSample.Droid/MapControlSample.Droid.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Droid/MapControlSample.Droid.csproj
@@ -54,13 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.UI.Maps" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.UI.Maps" Version="3.3.0" />
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
       <Version>2.2.0.3</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.UI" Version="3.3.0" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.33" />
   </ItemGroup>
