--- a/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.iOS/MapControlSample.iOS.csproj
@@ -100,11 +100,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.UI.Maps">
-      <Version>3.1.0-beta.3</Version>
+      <Version>3.3.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.UI" Version="3.3.0" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="3.1.0-beta.3" Condition="'$(Configuration)'=='Debug'" />
   </ItemGroup>
   <Import Project="..\MapControlSample.Shared\MapControlSample.Shared.projitems" Label="Shared" Condition="Exists('..\MapControlSample.Shared\MapControlSample.Shared.projitems')" />
