feat: Upgrade to official SkiaSharp packages

--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Droid/SkiaSharpTest.Droid.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.Droid/SkiaSharpTest.Droid.csproj
@@ -59,8 +59,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.SkiaSharp.Views">
-      <Version>2.80.0-uno.483</Version>
+    <PackageReference Include="SkiaSharp.Views.Uno">
+      <Version>2.80.3-preview.24</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
