--- a/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
+++ b/UI/SkiaSharpTest/SkiaSharpTest/SkiaSharpTest.UWP/SkiaSharpTest.UWP.csproj
@@ -11,15 +11,15 @@
       <Version>6.2.2</Version>
     </PackageReference>
     <PackageReference Include="SkiaSharp">
-      <Version>1.68.0</Version>
+      <Version>2.80.3-preview.24</Version>
     </PackageReference>
     <PackageReference Include="SkiaSharp.Views">
-      <Version>1.68.0</Version>
+      <Version>2.80.3-preview.24</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.Core" Version="2.0.0" />
-    <PackageReference Include="Uno.UI" Version="3.1.0-beta.3" />
+    <PackageReference Include="Uno.Core" Version="2.2.0-dev.3" />
+    <PackageReference Include="Uno.UI" Version="3.5.0-dev.223" />
   </ItemGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
