--- a/UI/ToyCar/ToyCar.Droid/ToyCar.Droid.csproj
+++ b/UI/ToyCar/ToyCar.Droid/ToyCar.Droid.csproj
@@ -65,7 +65,7 @@
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.33" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.WinUI.DualScreen">
+    <PackageReference Include="Uno.UI.DualScreen">
       <Version>3.1.0-beta.3</Version>
     </PackageReference>
   </ItemGroup>
