Changes to support themeing with Uno.Material

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.iOS/WCTDataTreeTabSample.iOS.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.iOS/WCTDataTreeTabSample.iOS.csproj
@@ -116,6 +116,9 @@
     <BundleResource Include="Resources\Fonts\uno-fluentui-assets.ttf" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Uno.Material">
+      <Version>1.0.0-dev.732</Version>
+    </PackageReference>
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
       <Version>6.1.0-build.207.gcac670e618</Version>
     </PackageReference>
