--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Gtk/WCTDataTreeTabSample.Skia.Gtk.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Skia.Gtk/WCTDataTreeTabSample.Skia.Gtk.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Prism.Uno" Version="8.0.0.1909" />
+    <PackageReference Include="Uno.Material" Version="1.0.0-dev.732" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="6.1.0-build.207.gcac670e618" />
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid" Version="6.1.0-build.207.gcac670e618" />
     <PackageReference Include="Uno.UI.Skia.Gtk" Version="3.6.0-dev.509" />
