--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Droid/WCTDataTreeTabSample.Droid.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Droid/WCTDataTreeTabSample.Droid.csproj
@@ -61,19 +61,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Uno.Material">
-      <Version>1.0.0-dev.732</Version>
+      <Version>1.0.0-dev.736</Version>
     </PackageReference>
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>6.1.0-build.207.gcac670e618</Version>
+      <Version>7.1.0-build.2.g0e224f133a</Version>
     </PackageReference>
     <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
-      <Version>6.1.0-build.207.gcac670e618</Version>
+      <Version>7.1.0-build.2.g0e224f133a</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.6.0-dev.509" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.509" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI" Version="3.7.0-dev.70" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.0-dev.70" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UniversalImageLoader" Version="1.9.33" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
+    <PackageReference Include="Xamarin.AndroidX.AppCompat.AppCompatResources">
+      <Version>1.2.0.5</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.AndroidX.Lifecycle.LiveData">
       <Version>2.1.0</Version>
     </PackageReference>
