--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.UWP/WCTDataTreeTabSample.UWP.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.UWP/WCTDataTreeTabSample.UWP.csproj
@@ -11,19 +11,19 @@
       <Version>6.2.12</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
-      <Version>6.1.1</Version>
+      <Version>7.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
-      <Version>6.1.1</Version>
+      <Version>7.0.1</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
       <Version>2.5.0</Version>
     </PackageReference>
-    <PackageReference Include="Uno.Core" Version="2.3.0-dev.3" />
+    <PackageReference Include="Uno.Core" Version="2.3.0" />
     <PackageReference Include="Uno.Material">
-      <Version>1.0.0-dev.732</Version>
+      <Version>1.0.0-dev.736</Version>
     </PackageReference>
-    <PackageReference Include="Uno.UI" Version="3.6.0-dev.509" />
+    <PackageReference Include="Uno.UI" Version="3.7.0-dev.70" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
   </ItemGroup>
