--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Wasm/WCTDataTreeTabSample.Wasm.csproj
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Wasm/WCTDataTreeTabSample.Wasm.csproj
@@ -39,13 +39,13 @@
     <!-- Note that for WebAssembly version 1.1.1 of the console logger required -->
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
-    <PackageReference Include="Uno.Material" Version="1.0.0-dev.732" />
-    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="6.1.0-build.207.gcac670e618" />
-    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid" Version="6.1.0-build.207.gcac670e618" />
-    <PackageReference Include="Uno.UI.WebAssembly" Version="3.6.0-dev.509" />
-    <PackageReference Include="Uno.UI.RemoteControl" Version="3.6.0-dev.509" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.0.0-dev.180" />
-    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.0.0-dev.180" />
+    <PackageReference Include="Uno.Material" Version="1.0.0-dev.736" />
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls" Version="7.1.0-build.2.g0e224f133a" />
+    <PackageReference Include="Uno.Microsoft.Toolkit.Uwp.UI.Controls.DataGrid" Version="7.1.0-build.2.g0e224f133a" />
+    <PackageReference Include="Uno.UI.WebAssembly" Version="3.7.0-dev.70" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="3.7.0-dev.70" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="2.1.0-dev.25" />
+    <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="2.1.0-dev.25" />
   </ItemGroup>
   <Import Project="..\WCTDataTreeTabSample.Shared\WCTDataTreeTabSample.Shared.projitems" Label="Shared" Condition="Exists('..\WCTDataTreeTabSample.Shared\WCTDataTreeTabSample.Shared.projitems')" />
 </Project>
