docs(webrtc): Added a README fild for WebRTC explaining the sample.

--- a/UI/WebRTC/WebRTC.SignalingServer/Properties/launchSettings.json
+++ b/UI/WebRTC/WebRTC.SignalingServer/Properties/launchSettings.json
@@ -11,16 +11,14 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "WebRTC.SignalingServer": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
