fixed dependency to dll issue

--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Droid/DemoApp.Droid.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Droid/DemoApp.Droid.csproj
@@ -55,7 +55,7 @@
     <Reference Include="Mono.Android.Export" />
     <Reference Include="mscorlib" />
     <Reference Include="PharmaSupply">
-      <HintPath>..\..\..\UnoPharmaSupply\UnoPharmaSupply\bin\Debug\monoandroid10.0\PharmaSupply.dll</HintPath>
+      <HintPath>..\Pre-BuiltDLLS\monoandroid11.0\PharmaSupply.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
