--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.UWP/DemoApp.UWP.csproj
@@ -149,7 +149,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PharmaSupply">
-      <HintPath>..\..\..\UnoPharmaSupply\UnoPharmaSupply\bin\Debug\uap10.0.17763\PharmaSupply.dll</HintPath>
+      <HintPath>..\Pre-BuiltDLLS\uap10.0.17763\PharmaSupply.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="..\DemoApp.Shared\DemoApp.Shared.projitems" Label="Shared" />
