--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Wasm/DemoApp.Wasm.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Wasm/DemoApp.Wasm.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PharmaSupply">
-      <HintPath>..\..\..\UnoPharmaSupply\UnoPharmaSupply\bin\Debug\netstandard2.0\PharmaSupply.dll</HintPath>
+      <HintPath>..\Pre-BuiltDLLS\netstandard2.0\PharmaSupply.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="..\DemoApp.Shared\DemoApp.Shared.projitems" Label="Shared" Condition="Exists('..\DemoApp.Shared\DemoApp.Shared.projitems')" />
