--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.iOS/DemoApp.iOS.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.iOS/DemoApp.iOS.csproj
@@ -107,7 +107,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="PharmaSupply">
-      <HintPath>..\..\..\UnoPharmaSupply\UnoPharmaSupply\bin\Debug\xamarinios10\PharmaSupply.dll</HintPath>
+      <HintPath>..\Pre-BuiltDLLS\xamarinios10\PharmaSupply.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Net.Http" />
