--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.macOS/DemoApp.macOS.csproj
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.macOS/DemoApp.macOS.csproj
@@ -62,7 +62,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="PharmaSupply">
-      <HintPath>..\..\..\UnoPharmaSupply\UnoPharmaSupply\bin\Debug\xamarinmac20\PharmaSupply.dll</HintPath>
+      <HintPath>..\Pre-BuiltDLLS\xamarinmac20\PharmaSupply.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
